fixed overflow prob

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -24,6 +24,7 @@ textarea {
 	box-shadow: 0 0 35px $box-shadow;
 	color: $text-color;
 	position: fixed;
+	// overflow-x: hidden;
 	top: 0;
 	left: 0;
 	z-index: 100;
@@ -102,6 +103,7 @@ textarea {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	// overflow-x: hidden;
 	&-content {
 		height: 85vh;
 		display: flex;
@@ -162,7 +164,7 @@ textarea {
 	justify-content: center;
 	align-items: center;
 	overflow: hidden;
-	overflow-x: hidden;
+	// overflow-x: hidden;
 	& h1 {
 		font-size: 2.5rem;
 		font-weight: 300;
@@ -175,6 +177,7 @@ textarea {
 		flex-wrap: wrap;
 		justify-content: center;
 		text-align: center;
+		overflow-x: hidden;
 		& .skill {
 			width: 15vw;
 			margin: 1rem;
@@ -280,6 +283,7 @@ textarea {
 	text-align: center;
 	position: relative;
 	background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(51, 51, 51, 0.5));
+	overflow-x: hidden;
 	& h1 {
 		font-weight: 300;
 		font-size: 2.5rem;
